app_files/nginx_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
