app_files/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - secretName: nip-tls-secret
    hosts:
    - app-127-0-0-1.nip.io
  rules:
  - host: app-127-0-0-1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app-svc
            port:
              number:  80
